# ant-gen

./: README.md  try-hsk.cabal
src/: Ant.hs  Game.hs  Genetics.hs  Main.hi  Main.hs  data.txt
