name:                try-hsk
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              LeMarwin
maintainer:          Lemarwin42@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable try-hsk
  main-is: Main.hs             
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
                       base >=4.7,
                       random >=1.0 && <1.1,
                       MonadRandom >=0.3 && <0.4,
                       array >=0.5 && <0.6,
                       repa >=3.2 && <3.3,
                       vector >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
